--- a/serrana/Cargo.toml
+++ b/serrana/Cargo.toml
@@ -3,19 +3,24 @@ name = "serrana"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+# <=== Compilation Profiles ===>
 [profile.dev]
 strip = true
 opt-level = 2
 incremental = true
 lto = false
 
+# <=== Generic Dependencies ===>
 [dependencies]
-dotenv = "0.15.0"
-tracing-subscriber = "0.2.0"
+dotenvy = "0.15.6"
 evalexpr = "8.1.0"
+rand = "0.8.5"
+tracing = "0.1.37"
+tracing-subscriber = "0.2.0"
 toml = "0.7.2"
 
+
+# <=== Advanced Dependencies ===>
 [dependencies.tokio]
 version = "1.0"
 features = ["macros", "signal", "rt-multi-thread", "time", "fs"]
@@ -27,11 +32,3 @@ features = ["framework", "standard_framework", "rustls_backend", "collector"]
 [dependencies.serde]
 version = "1.0.152"
 features = ["derive"]
-
-[dependencies.tracing]
-version = "0.1.37"
-features = ["std"]
-
-[dependencies.rand]
-version = "0.8.5"
-features = ["std_rng"]
